--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8" />
   <title>BHOST</title>
-  <meta name="author" content="Chris Mills" />
+  <meta name="author" content="Petrashkevich Roman" />
   <meta
     name="description"
     content="BHOST are a website hosting service. Without the best web hosting, your ability to run a successful website is going to be seriously hindered. We are experienced, last 15 years we lead the world in hosting service. "
